# xcoin-cpuminer

./: AUTHORS  Makefile.am  NEWS  README  Xcoin.c  cpu-miner.c  miner.h  quark.c
